--- a/src/components/RideListHeader.sass
+++ b/src/components/RideListHeader.sass
@@ -40,7 +40,7 @@
 
 .downChevron
   position: absolute
-  top: -8px // because svgs have a weird gap
+  top: 0
   right: 0
   left: 0
   width: 100%
